--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,7 @@
     },
     "routes": [
         { "src": "/(.*)", "dest": "/api/index.php" }
+        { "src": "/css/style.css", "dest": "/css/global.css" },
+        { "src": "/js/script.js", "dest": "/js/bootstrap.min.js" }
     ]
 }
